--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -4,7 +4,7 @@
   border-radius: 3px
 
 ::-webkit-scrollbar-thumb
-  background-color: #ec1f46
+  background-color: darken(#F5FAFE, 20%)
   border-radius: 3px
 
 .reviews
@@ -27,7 +27,7 @@
     &__item
       position: relative
       margin: 115px auto 0
-      padding: 0 62px 30px 62px
+      padding: 0 62px 30px 59px
       display: flex
       flex-direction: column
       align-items: center
@@ -69,6 +69,7 @@
       color: $text-color
     &__text
       margin: 25px 0 0 0
+      padding-right: 3px
       max-width: 537px
       height: 100%
       +Mulish(normal, 12px)
